objects/EUR_CRM_Meeting_Notes__mdt.object
<CustomObject>
    <description>Using for product list criteria</description>
    <fields>
        <fullName>EUR_CRM_API_Name_Field_to_Visit__c</fullName>
        <label>API Name Field to Visit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_API_Name_Object__c</fullName>
        <label>API Name Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Account_Record_Type_Dev_Name__c</fullName>
        <label>Account Record Type Dev Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Criteria__c</fullName>
        <label>Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Item_Name__c</fullName>
        <inlineHelpText>Item Name to display by tapping ob &apos;Action Bar&apos;</inlineHelpText>
        <label>Item Name in Action Bar</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Profile__c</fullName>
        <label>Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Record_Type__c</fullName>
        <inlineHelpText>Record Type Developer Name of displayed object</inlineHelpText>
        <label>Record Type Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sorting_field_name__c</fullName>
        <label>Sorting field name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit_RT_Name__c</fullName>
        <label>Visit Record Type Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CTM Meeting Notes</label>
    <listViews>
        <fullName>EUR_NG</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>EUR_CRM_Profile__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MasterLabel</field>
            <operation>startsWith</operation>
            <value>EUR NG</value>
        </filters>
        <label>EUR NG</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>New</fullName>
        <columns>MasterLabel</columns>
        <columns>EUR_CRM_Record_Type__c</columns>
        <columns>EUR_CRM_Item_Name__c</columns>
        <columns>EUR_CRM_Visit_RT_Name__c</columns>
        <columns>EUR_CRM_Criteria__c</columns>
        <columns>EUR_CRM_Sorting_field_name__c</columns>
        <columns>EUR_CRM_Profile__c</columns>
        <filterScope>Everything</filterScope>
        <label>New</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Meeting Notes</pluralLabel>
</CustomObject>